--- a/src/core/_config.scss
+++ b/src/core/_config.scss
@@ -125,7 +125,7 @@ $dark-secondary-text: $dark-secondary-dark !default;
 $dark-success-text: $dark-success-dark !default;
 $dark-warning-text: $dark-warning-dark !default;
 $dark-danger-text: $dark-danger-dark !default;
-$dark-muted-text: $dark-muted-dark !default;
+$dark-muted-text: $dark-muted-light !default;
 
 $dark-shadow-color-regular: hsla(0, 0%, 0%, 0.2) !default;
 $dark-shadow-color-hover: hsla(0, 0%, 0%, 0.3) !default;
